--- a/Karate.ipynb
+++ b/Karate.ipynb
@@ -159,6 +159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Best logP : -739.3884041633212\n",
       "NMI score: 0.6772430411026017\n",
       "The node misclassified additionally compared to OtrisymNMF: [9]\n"
      ]
